--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <figure>
-            <img src="WhatsApp Image 2024-09-26 at 12.08.35_fb7810da.jpg" alt="Little Taco shop Tacos" 
+            <img src="Tacos full.jpg" alt="Little Taco shop Tacos" 
             title="Tacos ready to eat!" width="400" height="260">
             <figcaption>Little Taco shop Tacos</figcaption>
         </figure>
