--- a/hours.html
+++ b/hours.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <figure>
-            <img src="WhatsApp Image 2024-09-26 at 12.08.34_ad00d162.jpg" alt="A Tray of Tasty Tacos" 
+            <img src="Tacos.jpg" alt="A Tray of Tasty Tacos" 
             title="We love Tray of tacos" width="400" height="267">
             <figcaption>A Tray of Tasty Tacos</figcaption>
         </figure>
