--- a/intex.html
+++ b/intex.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <figure>
-            <img src="WhatsApp Image 2024-09-26 at 12.08.34_6db63a88.jpg" alt="The Little Taco shop" 
+            <img src="Tacos with Drink.jpg" alt="The Little Taco shop" 
             title="We love tacos" width="400" height="267">
             <figcaption>Tacos and a Drink</figcaption>
         </figure>
